--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "react-typing-effect": "^2.0.5"
   }
 }
