--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "sass": "^1.49.8",
     "web-vitals": "^1.0.1"
   },
+  "homepage": "https://KateFiodarava.github.io/Portfolio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "react-router-dom": "^6.2.2",
     "react-typing-effect": "^2.0.5"
   }
